# FEUP-DA

./: README.md
DA1_PROJ/documentacao/html/: index.html  structENCOMENDA__VALOR.html
DA2_PROJ/: .gitignore  CMakeLists.txt  Doxyfile  README.md
DA2_PROJ/codigo/: da_t6_g62  empresa.cpp  empresa.h  graph.cpp  graph.h  main.cpp  menu.cpp  menu.h
DA2_PROJ/codigo/graph/: disjointSets.h  maxHeap.h  minHeap.h
DA2_PROJ/documentacao/html/: annotated.html  classEmpresa-members.html  classEmpresa.html  classGraph-members.html  classGraph.html  classMenu-members.html  classMenu.html  classes.html  dir_4d7be947362df13686123d6563352e9b.html  empresa_8h_source.html  files.html  functions.html  functions_func.html  graph_8h_source.html  menu_8h_source.html
DA2_PROJ/documentacao/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
DA2_PROJ/documentacao/latex/: annotated.tex  classEmpresa.tex  classGraph.tex  classMenu.tex  refman.tex
DA2_PROJ/input/: custom01.txt  custom02.txt  custom03.txt
